--- a/alexandria/app/src/main/res/layout/fragment_list_of_books.xml
+++ b/alexandria/app/src/main/res/layout/fragment_list_of_books.xml
@@ -4,8 +4,8 @@
 
     <RelativeLayout
         android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal|top">
         <ImageButton
             android:layout_width="wrap_content"
@@ -20,7 +20,7 @@
             android:layout_alignParentEnd="true"/>
 
         <EditText
-            android:layout_width = "fill_parent"
+            android:layout_width = "match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/searchText"
             android:inputType="text"
