--- a/alexandria/app/src/main/res/layout-land/activity_main_tablet.xml
+++ b/alexandria/app/src/main/res/layout-land/activity_main_tablet.xml
@@ -5,8 +5,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:baselineAligned="false"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <FrameLayout
             android:id="@+id/container"
