--- a/alexandria/app/src/main/res/layout-land/fragment_add_book.xml
+++ b/alexandria/app/src/main/res/layout-land/fragment_add_book.xml
@@ -8,34 +8,35 @@
         android:layout_height="match_parent"
         android:layout_gravity="left|center_vertical">
 
-        <EditText
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:id="@+id/eancontainer"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:minEms="@integer/ean_width"
-            android:id="@+id/ean"
-            android:saveEnabled="true"
-            android:textIsSelectable="false"
-            android:maxLength="@integer/ean_size"
-            android:hint="@string/input_hint"
-            android:layout_marginLeft="40dp"
-            android:layout_marginStart="40dp"
-            android:maxLines="1"
-            android:layout_marginTop="30dp"
+            android:layout_margin="20dp"
             android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_centerHorizontal="true">
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="number"
+                android:minEms="@integer/ean_width"
+                android:id="@+id/ean"
+                android:saveEnabled="true"
+                android:textIsSelectable="false"
+                android:maxLength="@integer/ean_size"
+                android:hint="@string/input_hint"
+                android:maxLines="1" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/scan_button"
-            android:id="@+id/scan_button"
-            android:layout_marginLeft="23dp"
-            android:layout_marginStart="23dp"
-            android:layout_alignBottom="@+id/ean"
-            android:layout_toRightOf="@+id/ean"
-            android:layout_toEndOf="@+id/ean"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/scan_button"
+                android:id="@+id/scan_button"
+                android:layout_marginLeft="23dp"
+                android:layout_marginStart="23dp"/>
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
