Disabled autofocus on EditText on ListOfBooks activity for better visibility of the user's list

--- a/alexandria/app/src/main/res/layout/fragment_list_of_books.xml
+++ b/alexandria/app/src/main/res/layout/fragment_list_of_books.xml
@@ -17,7 +17,9 @@
             android:layout_alignParentRight="true"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_marginTop="5dp"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentEnd="true"
+            android:descendantFocusability="beforeDescendants"
+            android:focusableInTouchMode="true"/>
 
         <EditText
             android:layout_width = "match_parent"
