--- a/alexandria/app/src/main/res/layout/fragment_add_book.xml
+++ b/alexandria/app/src/main/res/layout/fragment_add_book.xml
@@ -29,7 +29,8 @@
                 android:maxLines="1"
                 android:hint="@string/input_hint"
                 android:paddingRight="20dp"
-                android:paddingEnd="20dp"/>
+                android:paddingEnd="20dp"
+                android:focusableInTouchMode="true"/>
 
             <Button
                 android:layout_width="wrap_content"
