--- a/alexandria/app/src/main/res/layout/fragment_full_book.xml
+++ b/alexandria/app/src/main/res/layout/fragment_full_book.xml
@@ -6,6 +6,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ScrollView android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:fillViewport="false"
@@ -17,28 +18,29 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|top">
 
-                <TextView
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/fullBookTitle"
-                    android:textSize="@dimen/head_line"
-                    android:textIsSelectable="true"
-                    android:textStyle="bold"
-                    android:paddingRight="20dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_margin="10dp"/>
+                    android:layout_height="150dp"
+                    android:orientation="horizontal"
+                    android:layout_margin="5dp"
+                    android:id="@+id/fillBookCoverContainer">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/fullBookCover"
-                    android:contentDescription="@string/book_cover"
-                    android:layout_marginTop="15dp"
-                    android:layout_below="@+id/fullBookTitle"
-                    android:layout_alignLeft="@+id/fullBookTitle"
-                    android:layout_alignStart="@+id/fullBookTitle"/>
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:id="@+id/fullBookCover"
+                        android:contentDescription="@string/book_cover"
+                        android:layout_weight="0.3"/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="0.7"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/fullBookTitle"
+                        android:textSize="@dimen/head_line"
+                        android:textIsSelectable="true"
+                        android:textStyle="bold" />
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -49,9 +51,9 @@
                     android:textSize="18sp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="10dp"
-                    android:layout_alignTop="@+id/fullBookCover"
-                    android:layout_toRightOf="@+id/fullBookCover"
-                    android:layout_toEndOf="@+id/fullBookCover"/>
+                    android:layout_alignTop="@+id/fillBookCoverContainer"
+                    android:layout_toRightOf="@+id/fillBookCoverContainer"
+                    android:layout_toEndOf="@+id/fillBookCoverContainer"/>
 
 
                 <TextView
@@ -60,7 +62,7 @@
                     android:id="@+id/fullBookDesc"
                     android:ellipsize="end"
                     android:layout_marginLeft="10dp"
-                    android:layout_below="@+id/fullBookCover"
+                    android:layout_below="@+id/fillBookCoverContainer"
                     android:layout_margin="10dp"
                     />
 
@@ -88,21 +90,6 @@
                         android:textStyle="bold"
                         android:gravity="right|top"/>
                 </LinearLayout>
-
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="@string/back_button"
-                    android:id="@+id/backButton"
-                    android:onClick="goBack"
-                    android:src="@drawable/ic_action_undo"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_gravity="right|top"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignRight="@+id/fullBookTitle"
-                    android:layout_alignEnd="@+id/fullBookTitle"/>
-
-
             </RelativeLayout>
 
         </ScrollView>
