--- a/alexandria/app/src/main/res/layout/fragment_list_of_books.xml
+++ b/alexandria/app/src/main/res/layout/fragment_list_of_books.xml
@@ -33,7 +33,8 @@
             android:layout_toStartOf="@+id/searchButton"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            android:textColor="#000000" />
 
 
         <ListView android:id="@+id/listOfBooks"
