--- a/alexandria/app/src/main/res/menu/main.xml
+++ b/alexandria/app/src/main/res/menu/main.xml
@@ -4,5 +4,6 @@
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           app:showAsAction="never"
+          android:textColor="#000000"
            />
 </menu>
