--- a/Football_Scores-master/app/src/main/res/layout/fragment_main.xml
+++ b/Football_Scores-master/app/src/main/res/layout/fragment_main.xml
@@ -14,4 +14,10 @@
             android:divider="@android:color/transparent"
             android:dividerHeight="15sp"
             />
+    <TextView android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/no_game"
+        android:gravity="center"
+        android:textSize="18sp"/>
 </FrameLayout>
